# experiments

./: .gitignore  README.md  config.yml  environment.yml  generate-plot.sh  ralf-vldb.json  recsys_experiments.sh  requirements.txt  run_stl.sh  stl.sql  stl_experimets.sh  test_stl.sh
drop-rate-calc/: mlsys-figure-12.ipynb  pre-generate-windows.py  scratch-1.ipynb  scratch-2.ipynb  scratch-3.ipynb
nb/: 02-10-22-stl-data-exploration.ipynb  02-17-22 STL Throughput evaluation .ipynb  02-18-22 STL Visualize Keys .ipynb  02-20-22 STL Evaluation .ipynb  02-20-22 STL Query Visualization .ipynb  02-22-22 ALS Data Generation.ipynb  02-22-22 ALS Evaluation .ipynb  02-24-22 ALS Graphs.ipynb  02-24-22 STL Feature Store Loss Model .ipynb  02-27-22 ALS Evaluation .ipynb  02-28-22 ALS Result Analysis .ipynb  02-28-22-yahoo-evaluation.ipynb  03-08-2022 ALS Simulations.ipynb  03-13-2022 ALS Amit.ipynb  03-14-22-stl-evaluation-forecast.ipynb  03-17 als_simulation.ipynb  03-17-22 ALS implicit library.ipynb  03-17-22 Azure data exploration.ipynb  03-26_implicit.ipynb  03-29-22-als_plots.ipynb  03-29-22_wiki_plots.ipynb  1026_Findings.ipynb  ALS Updated Data Generation.ipynb  future_error_regression.ipynb  internet_als.ipynb  mlsys-figure-12.ipynb  plots.ipynb  (+1 more)
timely-experiments/: Cargo.toml  run_stl_online.sh  scratch.ipynb
timely-experiments/python/: stl.py
timely-experiments/scripts/: run_stl_online.sh  run_stl_timely_online.sh
timely-experiments/src/: lib.rs  main.rs  record.rs
timely-experiments/src/operators/: mod.rs  most_recent.rs  sink.rs  source.rs  stl.rs  window.rs
(+174 files in other folders)
