[package]
name = "timely-experiments"
version = "0.1.0"
authors = ["Peter Schafhalter <pschafhalter@berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timely = "0.12.0"
differential-dataflow = "0.12.0"
abomonation = "0.7.3"
abomonation_derive = "0.5.0"
pyo3 = { version = "0.14.3", features = ["auto-initialize"]}
redis = { version = "0.21.2", features = ["streams"]}
clap = "2.33.3"
serde_json = "1.0.68"